--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                     Skills
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-indigo-400 transition-all group-hover:w-full"></span>
                 </a>
+                <a href="#experience" class="text-sm font-medium text-gray-300 hover:text-white transition-colors relative group">
+                    Experience
+                    <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-indigo-400 transition-all group-hover:w-full"></span>
+                </a>
                 <a href="#projects" class="text-sm font-medium text-gray-300 hover:text-white transition-colors relative group">
                     Projects
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-indigo-400 transition-all group-hover:w-full"></span>
@@ -112,6 +116,7 @@
                 <a href="#home" class="mobile-link text-gray-300 hover:text-indigo-400 transition-colors p-3 rounded-lg hover:bg-gray-800 font-medium">Home</a>
                 <a href="#about" class="mobile-link text-gray-300 hover:text-indigo-400 transition-colors p-3 rounded-lg hover:bg-gray-800 font-medium">About</a>
                 <a href="#skills" class="mobile-link text-gray-300 hover:text-indigo-400 transition-colors p-3 rounded-lg hover:bg-gray-800 font-medium">Skills</a>
+                <a href="#experience" class="mobile-link text-gray-300 hover:text-indigo-400 transition-colors p-3 rounded-lg hover:bg-gray-800 font-medium">Experience</a>
                 <a href="#projects" class="mobile-link text-gray-300 hover:text-indigo-400 transition-colors p-3 rounded-lg hover:bg-gray-800 font-medium">Projects</a>
                 <a href="#contact" class="mobile-link text-center text-white bg-indigo-600 font-bold p-3 rounded-lg hover:bg-indigo-700 shadow-lg">Contact Me</a>
             </div>
@@ -377,6 +382,150 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Experience Section -->
+        <section id="experience" class="py-32 bg-gray-900 relative">
+            <div class="container mx-auto px-6">
+                <div class="text-center mb-16">
+                    <span class="text-indigo-400 font-bold tracking-widest text-sm uppercase mb-2 block">My Career</span>
+                    <h2 class="text-4xl md:text-6xl font-bold font-heading mb-6">Professional <span class="text-white">Experience</span></h2>
+                    <p class="text-gray-400 max-w-2xl mx-auto text-lg">My journey in the tech industry, featuring internships, training, and self-directed growth.</p>
+                </div>
+
+                <div class="max-w-5xl mx-auto space-y-8">
+                    <!-- Experience Item 1: EARGS -->
+                    <div class="glass-card p-8 md:p-10 rounded-3xl border border-gray-700 hover:border-indigo-500 transition-all hover:shadow-[0_0_30px_rgba(99,102,241,0.15)] group relative overflow-hidden">
+                         <div class="absolute top-0 right-0 p-4 opacity-10 group-hover:opacity-20 transition-opacity">
+                            <ion-icon name="briefcase-outline" class="text-9xl text-indigo-400"></ion-icon>
+                        </div>
+                        <div class="flex flex-col md:flex-row gap-6 md:gap-10 relative z-10">
+                            <div class="md:w-1/3">
+                                <h3 class="text-2xl font-bold text-white group-hover:text-indigo-400 transition-colors">Web Development Intern</h3>
+                                <p class="text-indigo-300 font-medium text-lg mt-1">EARGS</p>
+                                <div class="flex items-center gap-2 mt-3 text-gray-400 text-sm">
+                                    <ion-icon name="calendar-outline"></ion-icon>
+                                    <span>Nov 2025 – Present</span>
+                                </div>
+                                <div class="flex items-center gap-2 mt-1 text-gray-400 text-sm">
+                                    <ion-icon name="location-outline"></ion-icon>
+                                    <span>Remote / Hybrid</span>
+                                </div>
+                            </div>
+                            <div class="md:w-2/3 border-l-2 border-gray-700 pl-6 md:pl-10 space-y-4">
+                                <p class="text-gray-300 leading-relaxed">
+                                    Contributing to the frontend development of scalable web applications using modern best practices and version control workflows.
+                                </p>
+                                <ul class="space-y-2">
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-indigo-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Developing responsive user interfaces with <strong>HTML, CSS, and JavaScript</strong>, ensuring cross-browser compatibility.</span>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-indigo-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Collaborating with senior developers via <strong>Git & GitHub</strong> for efficient code management and peer reviews.</span>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-indigo-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Optimizing page load speeds and performance through efficient coding and asset management.</span>
+                                    </li>
+                                </ul>
+                                <div class="flex flex-wrap gap-2 pt-2">
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">Frontend</span>
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">Git</span>
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">Teamwork</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Experience Item 2: Nettech India -->
+                    <div class="glass-card p-8 md:p-10 rounded-3xl border border-gray-700 hover:border-purple-500 transition-all hover:shadow-[0_0_30px_rgba(168,85,247,0.15)] group relative overflow-hidden">
+                         <div class="absolute top-0 right-0 p-4 opacity-10 group-hover:opacity-20 transition-opacity">
+                            <ion-icon name="school-outline" class="text-9xl text-purple-400"></ion-icon>
+                        </div>
+                        <div class="flex flex-col md:flex-row gap-6 md:gap-10 relative z-10">
+                            <div class="md:w-1/3">
+                                <h3 class="text-2xl font-bold text-white group-hover:text-purple-400 transition-colors">Full Stack Development Trainee</h3>
+                                <p class="text-purple-300 font-medium text-lg mt-1">Nettech India</p>
+                                <div class="flex items-center gap-2 mt-3 text-gray-400 text-sm">
+                                    <ion-icon name="calendar-outline"></ion-icon>
+                                    <span>April 2025 – Present</span>
+                                </div>
+                                <div class="flex items-center gap-2 mt-1 text-gray-400 text-sm">
+                                    <ion-icon name="location-outline"></ion-icon>
+                                    <span>Thane, India</span>
+                                </div>
+                            </div>
+                            <div class="md:w-2/3 border-l-2 border-gray-700 pl-6 md:pl-10 space-y-4">
+                                <p class="text-gray-300 leading-relaxed">
+                                    Intensive training program focused on the MERN stack architecture, culminating in the development of full-scale web applications.
+                                </p>
+                                <ul class="space-y-2">
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-purple-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Mastering <strong>MongoDB, Express, React, and Node.js</strong> to build dynamic, data-driven applications.</span>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-purple-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Implementing <strong>RESTful APIs</strong> and real-time database interactions for seamless frontend-backend integration.</span>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-purple-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Designed and deployed multiple capstone projects simulating real-world business requirements.</span>
+                                    </li>
+                                </ul>
+                                <div class="flex flex-wrap gap-2 pt-2">
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">MERN Stack</span>
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">API Design</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Experience Item 3: Project-based -->
+                    <div class="glass-card p-8 md:p-10 rounded-3xl border border-gray-700 hover:border-pink-500 transition-all hover:shadow-[0_0_30px_rgba(236,72,153,0.15)] group relative overflow-hidden">
+                         <div class="absolute top-0 right-0 p-4 opacity-10 group-hover:opacity-20 transition-opacity">
+                            <ion-icon name="code-slash-outline" class="text-9xl text-pink-400"></ion-icon>
+                        </div>
+                        <div class="flex flex-col md:flex-row gap-6 md:gap-10 relative z-10">
+                            <div class="md:w-1/3">
+                                <h3 class="text-2xl font-bold text-white group-hover:text-pink-400 transition-colors">Self-Directed Developer</h3>
+                                <p class="text-pink-300 font-medium text-lg mt-1">Project-Based Learning</p>
+                                <div class="flex items-center gap-2 mt-3 text-gray-400 text-sm">
+                                    <ion-icon name="calendar-outline"></ion-icon>
+                                    <span>Ongoing</span>
+                                </div>
+                            </div>
+                            <div class="md:w-2/3 border-l-2 border-gray-700 pl-6 md:pl-10 space-y-4">
+                                <p class="text-gray-300 leading-relaxed">
+                                    Continuously expanding technical capabilities through building 10+ end-to-end web applications and solving complex coding challenges.
+                                </p>
+                                <ul class="space-y-2">
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-pink-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Engineered secure <strong>Authentication Systems</strong> using JWT, bcrypt, and session management.</span>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-pink-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Built scalable backends with <strong>Node.js & Express</strong>, handling complex CRUD operations and middleware logic.</span>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <ion-icon name="checkmark-circle" class="text-pink-500 mt-1 flex-shrink-0"></ion-icon>
+                                        <span class="text-gray-400 text-sm">Focused on clean code architecture, component reusability in React, and responsive designs with Tailwind CSS.</span>
+                                    </li>
+                                </ul>
+                                <div class="flex flex-wrap gap-2 pt-2">
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">Self-Starter</span>
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">Full Stack</span>
+                                    <span class="px-3 py-1 bg-gray-800 text-gray-300 rounded-full text-xs font-bold border border-gray-600">Problem Solving</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
                 </div>
             </div>
         </section>
