--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body class="bg-gray-900 text-gray-100 font-sans antialiased overflow-x-hidden selection:bg-indigo-500 selection:text-white">
+    <!-- Custom Cursor -->
+    <div class="cursor-dot"></div>
+    <div class="cursor-glow"></div>
 
 
     <!-- Atmospheric Background Effects -->
@@ -374,14 +377,14 @@
                         <div class="flex flex-col md:flex-row gap-6 md:gap-10 relative z-10">
                             <div class="md:w-1/3">
                                 <h3 class="text-2xl font-bold text-white group-hover:text-gray-200 transition-colors">Web Development Intern</h3>
-                                <p class="text-gray-400 font-medium text-lg mt-1">EARGS</p>
+                                <p class="text-gray-400 font-medium text-lg mt-1"><a href="https://www.eargs.com/" target="_blank" class="hover:text-white transition-colors border-b border-transparent hover:border-white">EARGS</a></p>
                                 <div class="flex items-center gap-2 mt-3 text-gray-500 text-sm">
                                     <ion-icon name="calendar-outline"></ion-icon>
                                     <span>Nov 2025 – Present</span>
                                 </div>
                                 <div class="flex items-center gap-2 mt-1 text-gray-500 text-sm">
                                     <ion-icon name="location-outline"></ion-icon>
-                                    <span>Remote / Hybrid</span>
+                                    <span>Offline</span>
                                 </div>
                             </div>
                             <div class="md:w-2/3 border-l-2 border-gray-700 pl-6 md:pl-10 space-y-4">
@@ -419,7 +422,7 @@
                         <div class="flex flex-col md:flex-row gap-6 md:gap-10 relative z-10">
                             <div class="md:w-1/3">
                                 <h3 class="text-2xl font-bold text-white group-hover:text-gray-200 transition-colors">Full Stack Trainee</h3>
-                                <p class="text-gray-400 font-medium text-lg mt-1">Nettech India</p>
+                                <p class="text-gray-400 font-medium text-lg mt-1"><a href="https://www.nettechindia.com/" target="_blank" class="hover:text-white transition-colors border-b border-transparent hover:border-white">Nettech India</a></p>
                                 <div class="flex items-center gap-2 mt-3 text-gray-500 text-sm">
                                     <ion-icon name="calendar-outline"></ion-icon>
                                     <span>April 2025 – Present</span>
